--- a/MonkeyWindow/MonkeyWindow.csproj
+++ b/MonkeyWindow/MonkeyWindow.csproj
@@ -4,6 +4,7 @@
     <TargetFramework>net6.0</TargetFramework>
     <ImplicitUsings>enable</ImplicitUsings>
     <Nullable>enable</Nullable>
+    <AllowUnsafeBlocks>true</AllowUnsafeBlocks>
   </PropertyGroup>
 
   <ItemGroup>
@@ -15,6 +16,7 @@
   <ItemGroup>
     <PackageReference Include="Giawa.OpenGL" Version="0.2.1" />
     <PackageReference Include="glfw-net" Version="3.3.1" />
+    <PackageReference Include="StbImageSharp" Version="2.27.11" />
   </ItemGroup>
 
 </Project>
